Misalignment in article version edit page - Fixed

--- a/public/src/page/community/solutions.scss
+++ b/public/src/page/community/solutions.scss
@@ -332,3 +332,5 @@ body.community #sticky_header.category-sticky.is_stuck {
       padding-top: 10px;
     }
 }
+
+#folder-form-container .span12 { margin-left: 0; }
